# gil-clinic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  DOCKER.md  Dockerfile  GHOS_STATUS.md  GHOS_V2_STATUS_REPORT.html  GIL_CLINIC_PRODUCT_DEVELOPMENT.md  OPD_INTEGRATION_PLAN.md  SMART_OPD_MASTER_REFERENCE.md  USER_MANUAL.html  USER_MANUAL.md  V2_ARCHITECTURE.md  V2_PRODUCT_DEVELOPMENT.md  _config.yml  _config.yml.bak  alembic.ini  app.py  docker-compose.yml  fix_dns.bat  gen_bible.py  generate_manual.py  ghos_v2_blueprint_pure_blueprint.json  ghos_v2_blueprint_rendered.html  ghos_v2_launch_plan.json  ghos_v2_launch_plan_rendered.html  index.html  llm_harness.py  main_v2.py  pyproject.toml  requirements.txt  supabase_schema.sql  test_write.md  v2_sections_1_2.md  v2_test.md  validate_identity_skeleton.py  verify_final_branch.py  wait_config_deploy.py
.streamlit/: config.toml
alembic/: DATABASE_REVIEW.md  env.py
assets/: manifest.json  service-worker.js  style.css
cardioqueue_data/: beds.json  bill_items.json  departments.json.bak  feedback.json  inventory_categories.json  services.json.bak  wards.json
google-apps-script/: Code.gs
js/: app.js  doctor.js  manager.js  reception.js
pages/: AI_Dietician.py  AI_FollowUp.py  AI_Prescription.py  AI_Receptionist.py  AI_Report_Explainer.py  AI_Triage.py  AI_VoiceAgent.py  Accountant.py  Activity_Log.py  Admin.py  Analytics.py  Appointments.py  Backup.py  Billing.py  Compliance.py  Daily_List.py  Doctor.py  ECG.py  Echo.py  Email.py  Emergency.py  EncryptionPage.py  Feedback.py  Finance.py  FollowUp.py  GST.py  HR.py  IPD_Ward.py  Inventory.py  Lab.py  Lab_Technician.py  Logging.py  Manager.py  Monitoring.py  MultiBranch.py  Nurse.py  OPD.py  Owner_Dashboard.py  Password_Management.py  Patient_History.py  (+21 more)
patient-pwa/: app.js  index.html  manifest.json  service-worker.js  style.css
pwa/: index.html  manifest.json  service-worker.js
scripts/: migrate.sh  seed.py
src/: ARCHITECTURE.md  DEPENDENCY_MAP.md  IMPORT_RULES.md  identity_README.md
utils/: __init__.py  ai_dietician.py  ai_followup.py  ai_prescription.py  ai_receptionist.py  ai_report_explainer.py  ai_triage.py  ai_voice_agent.py  appointments.py  audit.py  backup.py  billing.py  compliance.py  config.py  db.py  department_status.py  email.py  emergency.py  encryption.py  feedback.py  finance.py  followup.py  gst.py  hr.py  (+20 more)
(+367 files in other folders)
