[project]
name = "ghos-identity"
version = "0.1.0"
description = "GHOS Identity Engine — Authentication and Authorization"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Dr. Gurjeet Singh Gill" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis[hiredis]>=5.0.0",
    "redis[asyncio]>=5.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-arch>=0.1.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
    "testcontainers[postgres]>=4.0.0",
    "testcontainers[redis]>=4.0.0",
]

[project.scripts]
seed-identity = "scripts.seed:main"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | .*\.pyi
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
exclude = [
    "tests/",
    "alembic/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (domain logic, no infrastructure)",
    "integration: Integration tests (API + database)",
    "e2e: End-to-end tests (full stack)",
    "slow: Slow tests that may need more time",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "alembic/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
